# chorus-client

./: Cargo.toml  Config.toml  Readme.md  racestate.txt
Legacy/: index.html
OBSTools/: text1.lua
Other tries/: Udp.lua  client.py
src/: main.rs  obsws.rs  some connect.rs  some.rs
