[package]
name = "chorus-client"
version = "0.1.0"
authors = ["Lukas Bachschwell <lukas@lbsfilm.at>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

clap = "2.33.0"
url = "2.1.1"
serde_json = "1.0"
rand = "0.7.3"
tokio = { version = "0.2", default-features = false, features = ["io-std", "macros"] }
futures = "0.3"
pin-project = "0.4"
tungstenite = "0.9.2"
env_logger = "0.7"
log = "*"

[dependencies.tokio-tungstenite]

git = "https://github.com/snapview/tokio-tungstenite"
